# rust_GPU_raytracing

./: .gitignore  Cargo.toml  README.md
3D_models/: Wall.stl
src/: Scene.rs  buffers.rs  camera.rs  compute_shader.wgsl  define_scene.rs  gpu_example_file.rs  image_texture.rs  main.rs  render_shader.wgsl  renderer.rs  shader.wgsl  stl_to_triangles.rs  triangle_object.rs
