[package]
name = "gpu_ray_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
pollster = "0.3.0"
rand = {version = "0.8.5", features = ["small_rng"]}
rayon = "1.10.0"
wgpu = "0.20.0"
winit = "0.29.15"
